FIX – morphology styles and collapse behaviour

--- a/wordweb-app/src/main/resources/scss/_buttons.scss
+++ b/wordweb-app/src/main/resources/scss/_buttons.scss
@@ -72,7 +72,7 @@
 }
 
 .btn-collapse {
-  &[aria-expanded="true"]{
+  &.show{
     .collapse-icon{
       transform: rotate(180deg);
     }
